removed magic cursor

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 <body class="page-template page-template-page-templates page-template-home-light page-template-page-templateshome-light-php page page-id-954 elementor-default elementor-kit-6 elementor-page elementor-page-954">
         <!-- ===== Magic Cursor Start ===== -->
-        <div id="magic-cursor">
+        <!-- <div id="magic-cursor">
         <div id="ball"></div>
-    </div>
+    </div> -->
         <!-- ===== Magic Cursor End ===== -->
 
     <!-- ===== Loader Start ===== -->
