--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         
                 <div class="about-bottom-content">
             <div>
-                <h4>I'M AN INNOVATIVE DESIGNER AND DIGITAL ARTIST IN TOKYO. <br>MY PASSION FOR MINIMALIST AESTHETICS, ELEGANT TYPOGRAPHY, <br>AND INTUITIVE DESIGN SHINES THROUGH IN MY WORK.</h4>
+                <h4>I'M AN INNOVATIVE DESIGNER AND DIGITAL ARTIST IN CALIFORNIA. <br>MY PASSION FOR MINIMALIST AESTHETICS, ELEGANT TYPOGRAPHY, <br>AND INTUITIVE DESIGN SHINES THROUGH IN MY WORK.</h4>
             </div>
             <p>I'm on the cutting edge of no-code tools that allow me to bring my creative visions to
 life. Though my methods may be unconventional, my dedication to the craft is
@@ -480,7 +480,7 @@ unparalleled. I thrive on finding <i>"unexpected solutions"</i> and believe that
 the right perspective, design can elevate the human experience.</p>
             <!-- <p class="responsive-mode">I'm on the edge of no-code tools that allow me to bring my creativity to life.</p> -->
 
-                        <a             href="https://drive.google.com/file/d/1Issw97gs-kreC7QWev66jO6YC2FdF0L0/view" download class="theme-btn">Download Resume</a>
+                        <a             href="https://drive.google.com/file/d/125RbZ4YivDII5nfQ-tEtwcQ94mkfj4yI/view" download class="theme-btn">Download Resume</a>
                     </div>
             </div>
 </section>
