commented out testimonials

--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ WEBFLOW awards and won a minimal style award.</p>
 				<div class="elementor-widget-container">
 			
 <!-- ===== Testimonial Start ===== -->
-<section class="testimonial-sec">
+<!-- <section class="testimonial-sec">
     <div class="section-header3">
         <h3 class="title">
             <span>TRUSTED BY</span>
@@ -1410,7 +1410,7 @@ that delight&quot;</p>
                                 </ul>
 
     </div>
-</section>
+</section> -->
 <!-- ===== Testimonial End ===== -->
 
     		</div>
