--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="custom-row">
 
                             <!-- ===== Local Time ===== -->
-                            <div class="header-local-time-box">
+                            <!--<div class="header-local-time-box">
                                                                 <a  href="index.html"><span>Local/</span></a>
                                 
                                                                 <span id="realtime">00:00</span>
-                                                            </div>
+                                                            </div> -->
 
                             <div class="header-middle">
                                 <div class="humberg-menu">
