--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
                             <!-- ===== Header Contact Button ===== -->
                                                         <div class="header-right">
-                                <a href="index.html" class="theme-btn">Navigate Here</a>
+                                <a href="index.html" class="theme-btn">Go To</a>
                             </div>
                             
                         </div>
