--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail1-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_02.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_02a.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
                     <p class="title">Raven Folio</p>
