images and image details

--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_01.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_11.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Hella magic store</p>
-                    <p class="subtitle">Business</p>
+                    <p class="title">Degen Rivals</p>
+                    <p class="subtitle">Look Mister</p>
                 </div>
                                 <div class="right">
                     <span class="date">2024</span>
@@ -367,11 +367,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail1-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_02a.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_10.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Raven Folio</p>
-                    <p class="subtitle">Portfolio</p>
+                    <p class="title">Black Magic Bar</p>
+                    <p class="subtitle">Jon Michael Studios</p>
                 </div>
                                 <div class="right">
                     <span class="date">2023</span>
@@ -383,11 +383,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail2-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_03.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_09.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Xiong Wall</p>
-                    <p class="subtitle">Marketplace</p>
+                    <p class="title">Aquareum</p>
+                    <p class="subtitle">zkCandy</p>
                 </div>
                                 <div class="right">
                     <span class="date">2023</span>
@@ -399,11 +399,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_04.png" alt="">            </div>
+                <img decoding="async" src="./images/work_07.png" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Elementor</p>
-                    <p class="subtitle">Themes</p>
+                    <p class="title">InfinitROB</p>
+                    <p class="subtitle">GearType Media</p>
                 </div>
                                 <div class="right">
                     <span class="date">2022</span>
@@ -415,11 +415,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail1-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_05.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_01.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Louis Phillips</p>
-                    <p class="subtitle">Portfolio</p>
+                    <p class="title">Guitar Pedals</p>
+                    <p class="subtitle">Prototyping</p>
                 </div>
                                 <div class="right">
                     <span class="date">2022</span>
@@ -431,11 +431,11 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail2-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_07.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_04.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Panda Do</p>
-                    <p class="subtitle">Branding</p>
+                    <p class="title">Read Write Type</p>
+                    <p class="subtitle">Talking Fingers</p>
                 </div>
                                 <div class="right">
                     <span class="date">2024</span>
