--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
         <div class="featured-card">
             <a             class="link-overlay" href="https://wpriverthemes.com/bronx/work-detail-light/"></a>
                         <div class="img-box">
-                <img decoding="async" src="./images/work_07.jpg" alt="">            </div>
+                <img decoding="async" src="./images/work_03.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
                     <p class="title">InfinitROB</p>
@@ -418,7 +418,7 @@ the keyboard, I craft clear experiences out of nothing but ones and zeroes.</p>
                 <img decoding="async" src="./images/work_01.jpg" alt="">            </div>
                         <div class="content">
                 <div class="left">
-                    <p class="title">Guitar Pedals</p>
+                    <p class="title">Expression</p>
                     <p class="subtitle">Prototyping</p>
                 </div>
                                 <div class="right">
