--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
      === Favicon ===== -->
     <!-- <link rel="icon" href="./images/partner_adidas.png" type="image/png"> -->
 
-    <link rel="icon" href="./images/rjh_logo.png" sizes="32x32" />
-<link rel="icon" href="./images/rjh_logo.png" sizes="192x192" />
-<link rel="apple-touch-icon" href="./images/rjh_logo.png" />
-<meta name="msapplication-TileImage" content="./images/rjh_logo.png" />
+    <link rel="icon" href="./images/r_logo.png" sizes="32x32" />
+<link rel="icon" href="./images/r_logo.png" sizes="192x192" />
+<link rel="apple-touch-icon" href="./images/r_logo.png" />
+<meta name="msapplication-TileImage" content="./images/r_logo.png" />
 
     <!-- ===== Fonts ===== -->
   	
