--- a/index.html
+++ b/index.html
@@ -353,6 +353,242 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 <div class="full-image-sec pt-30 sequence-container">
     <div class="full-image-box">
+        <canvas id="scroll-canvas" class="scaleDown"></canvas>
+    </div>
+</div>
+
+<style>
+    /* Ensures the canvas takes the full width of the viewport */
+    #scroll-canvas {
+        display: block; /* Remove any default inline spacing */
+        width: 100vw; /* Make canvas full width of the viewport */
+        height: auto; /* Maintain aspect ratio */
+        image-rendering: -webkit-optimize-contrast; /* Improve image quality */
+        image-rendering: crisp-edges; /* Prevent anti-aliasing */
+        margin: 0 auto; /* Centering */
+    }
+
+    /* ScaleDown class definition to ensure it behaves like an image */
+    .scaleDown {
+        max-width: 100%; /* Ensure it doesn't overflow the container */
+        height: auto; /* Maintain aspect ratio */
+    }
+</style>
+
+<script>
+    const canvas = document.getElementById('scroll-canvas');
+    const context = canvas.getContext('2d');
+
+    // Image source array
+    const images = [
+        "./images/cycles/header/gamelab_00.jpg",
+        "./images/cycles/header/gamelab_01.jpg",
+        "./images/cycles/header/gamelab_02.jpg",
+        "./images/cycles/header/gamelab_03.jpg",
+        "./images/cycles/header/gamelab_04.jpg",
+        "./images/cycles/header/gamelab_05.jpg",
+        "./images/cycles/header/gamelab_06.jpg",
+        "./images/cycles/header/gamelab_07.jpg",
+        "./images/cycles/header/gamelab_08.jpg",
+        "./images/cycles/header/gamelab_09.jpg",
+        "./images/cycles/header/gamelab_10.jpg",
+        "./images/cycles/header/gamelab_11.jpg",
+        "./images/cycles/header/gamelab_12.jpg",
+        "./images/cycles/header/gamelab_13.jpg",
+        "./images/cycles/header/gamelab_14.jpg",
+        "./images/cycles/header/gamelab_15.jpg",
+    ];
+
+    const frameCount = images.length;
+    const imageElements = [];
+
+    // Preload images
+    const preloadImages = () => {
+        images.forEach(src => {
+            const img = new Image();
+            img.src = src;
+            imageElements.push(img);
+        });
+    };
+
+    // Draw the image on the canvas
+    const updateImage = (index) => {
+        const img = imageElements[index];
+        context.clearRect(0, 0, canvas.width, canvas.height);
+        
+        // Calculate aspect ratio and scaling
+        const imgAspectRatio = img.width / img.height;
+        const canvasAspectRatio = canvas.width / canvas.height;
+
+        let drawWidth, drawHeight;
+        if (imgAspectRatio > canvasAspectRatio) {
+            // Image is wider than canvas
+            drawWidth = canvas.width; // Match canvas width
+            drawHeight = drawWidth / imgAspectRatio; // Calculate height
+        } else {
+            // Image is taller than canvas
+            drawHeight = canvas.height; // Match canvas height
+            drawWidth = drawHeight * imgAspectRatio; // Calculate width
+        }
+
+        // Draw the image, centered in the canvas
+        const xOffset = (canvas.width - drawWidth) / 2;
+        const yOffset = (canvas.height - drawHeight) / 2;
+
+        context.drawImage(img, xOffset, yOffset, drawWidth, drawHeight);
+    };
+
+    const updateCanvasSize = () => {
+        // Set canvas height based on the window size while keeping the width 100vw
+        canvas.width = window.innerWidth; // Full width of viewport
+        canvas.height = window.innerHeight; // Adjust height as needed (or set a specific value)
+    };
+
+    const updateImageOnScroll = () => {
+        const container = document.querySelector('.sequence-container');
+        const rect = container.getBoundingClientRect();
+        const midScreen = window.innerHeight / 2;
+
+        if (rect.top < midScreen && rect.bottom > 0) {
+            const containerHeight = rect.height;
+            const scrollFraction = Math.min(1, Math.max(0, (midScreen - rect.top) / containerHeight));
+            const frameIndex = Math.min(frameCount - 1, Math.floor(scrollFraction * frameCount));
+            updateImage(frameIndex);
+        } else {
+            // If not in view, keep the first image visible
+            updateImage(0);
+        }
+    };
+
+    // Initialize
+    preloadImages();
+    updateCanvasSize();
+    window.addEventListener('scroll', updateImageOnScroll);
+    window.addEventListener('resize', updateCanvasSize);
+
+    // Ensure the first image is visible immediately on page load
+    window.onload = () => {
+        updateImage(0); // Show the first image immediately
+    };
+</script>
+
+
+<!-- <div class="full-image-sec pt-30 sequence-container">
+    <div class="full-image-box">
+        <canvas id="scroll-canvas"></canvas>
+    </div>
+</div>
+
+<style>
+    /* Ensures the canvas takes up the full space of the container */
+    #scroll-canvas {
+        display: block; /* Remove any default inline spacing */
+        width: 100%; /* Make canvas responsive */
+        height: auto; /* Maintain aspect ratio */
+    }
+</style>
+
+<script>
+    const canvas = document.getElementById('scroll-canvas');
+    const context = canvas.getContext('2d');
+
+    // Image source array
+    const images = [
+        "./images/cycles/header/gamelab_00.jpg",
+        "./images/cycles/header/gamelab_01.jpg",
+        "./images/cycles/header/gamelab_02.jpg",
+        "./images/cycles/header/gamelab_03.jpg",
+        "./images/cycles/header/gamelab_04.jpg",
+        "./images/cycles/header/gamelab_05.jpg",
+        "./images/cycles/header/gamelab_06.jpg",
+        "./images/cycles/header/gamelab_07.jpg",
+        "./images/cycles/header/gamelab_08.jpg",
+        "./images/cycles/header/gamelab_09.jpg",
+        "./images/cycles/header/gamelab_10.jpg",
+        "./images/cycles/header/gamelab_11.jpg",
+        "./images/cycles/header/gamelab_12.jpg",
+        "./images/cycles/header/gamelab_13.jpg",
+        "./images/cycles/header/gamelab_14.jpg",
+        "./images/cycles/header/gamelab_15.jpg",
+    ];
+
+    const frameCount = images.length;
+    const imageElements = [];
+
+    // Preload images
+    const preloadImages = () => {
+        images.forEach(src => {
+            const img = new Image();
+            img.src = src;
+            imageElements.push(img);
+        });
+    };
+
+    // Draw the image on the canvas
+    const updateImage = (index) => {
+        const img = imageElements[index];
+        context.clearRect(0, 0, canvas.width, canvas.height);
+        
+        // Calculate aspect ratio
+        const imgAspectRatio = img.width / img.height;
+        const canvasAspectRatio = canvas.width / canvas.height;
+
+        let drawWidth, drawHeight;
+        if (imgAspectRatio > canvasAspectRatio) {
+            // Image is wider than canvas
+            drawWidth = canvas.width;
+            drawHeight = drawWidth / imgAspectRatio;
+        } else {
+            // Image is taller than canvas
+            drawHeight = canvas.height;
+            drawWidth = drawHeight * imgAspectRatio;
+        }
+
+        // Draw the image, centering it
+        const xOffset = (canvas.width - drawWidth) / 2;
+        const yOffset = (canvas.height - drawHeight) / 2;
+
+        context.drawImage(img, xOffset, yOffset, drawWidth, drawHeight);
+    };
+
+    const updateCanvasSize = () => {
+        const container = document.querySelector('.full-image-box');
+        const { width, height } = container.getBoundingClientRect();
+        canvas.width = width;
+        canvas.height = height;
+    };
+
+    const updateImageOnScroll = () => {
+        const container = document.querySelector('.sequence-container');
+        const rect = container.getBoundingClientRect();
+        const midScreen = window.innerHeight / 2;
+
+        if (rect.top < midScreen && rect.bottom > 0) {
+            const containerHeight = rect.height;
+            const scrollFraction = Math.min(1, Math.max(0, (midScreen - rect.top) / containerHeight));
+            const frameIndex = Math.min(frameCount - 1, Math.floor(scrollFraction * frameCount));
+            updateImage(frameIndex);
+        } else {
+            // If not in view, keep the first image visible
+            updateImage(0);
+        }
+    };
+
+    // Initialize
+    preloadImages();
+    updateCanvasSize();
+    window.addEventListener('scroll', updateImageOnScroll);
+    window.addEventListener('resize', updateCanvasSize);
+
+    // Ensure the first image is visible immediately on page load
+    window.onload = () => {
+        updateImage(0); // Show the first image immediately
+    };
+</script> -->
+
+
+<!-- <div class="full-image-sec pt-30 sequence-container">
+    <div class="full-image-box">
         <canvas id="scroll-canvas"></canvas>
     </div>
 </div>
@@ -442,7 +678,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     window.onload = () => {
         updateImage(0); // Show the first image immediately
     };
-</script>
+</script> -->
 
 
 
